aws/projects/StarWars-HTMLsemantics-master/cf-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  CloudFormation Template for Kittens Carousel Static Website on EC2.
  This template deploys Kittens Carousel Static Website on Amazon Linux 2
  (ami-09d95fab7fff3776c) EC2 Instance with custom security group 
  allowing http connections on port 80. Kittens Carousel Static Website 
  is downloaded from Github repository, then deployed on Apache Web Server.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-09d95fab7fff3776c
      InstanceType: t2.micro
      KeyName: sungur
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:                
        -                        
          Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack   
      UserData:
        Fn::Base64: 
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html/
            wget hhttps://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/index.html
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/style.css
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/amblem.png
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/banner.jpg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img1.jpg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img2.jpeg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img3.jpg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img4.jpg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img5.jpeg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img6.jpg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/img7.jpg
            wget https://raw.githubusercontent.com/Sungur034/clarusway-aws-devops-workshop/master/aws/projects/StarWars-HTMLsemantics-master/images/starry-sky.jpg
            systemctl start httpd
            systemctl enable httpd
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
